Configurando Socket, creando HTML de los mensajes y configurand el form

--- a/client/index.html
+++ b/client/index.html
@@ -4,38 +4,107 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CHAT BOT || Valentín Gutiérrez</title>
-</head>
+    <script type="module">
+        import { io } from 'https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.4/socket.io.esm.min.js'
+        const socket = io();
+        const form = document.getElementById('form');
+        const message = document.getElementById('message');
+        const messages = document.getElementById('messages');
+ 
+        socket.on('chat message', msg => {
+            const item = `<li>${msg}</li>`;
+            messages.insertAdjacentHTML('beforeend', item)
+        })
+        form.addEventListener('submit', e =>{
+            e.preventDefault();
+            if(message.value){
+                socket.emit('chat message', message.value)
+                message.value  = ""
+            }
+        })
+
+    </script>
 <style>
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
 
-:root{
-    color-scheme: light dark;
-}
+    :root{
+        color-scheme: light dark;
+    }
 
-body{
-    display: grid;
-    place-content: center;
-    height: 100vh;
-    padding: 36px;
-    grid-template-rows: 1fr;
-}
+    body{
+        display: grid;
+        place-content: center;
+        height: 100vh;
+        padding: 36px 36px 100px 36px;
+        grid-template-rows: 1fr;
+    }
 
-#chat{
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    overflow: hidden;
-    height: 100%;
-    width: 350px;
-    position: relative;
-}
+    #chat{
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        overflow: hidden;
+        height: 100%;
+        width: 350px;
+        position: relative;
+    }
+
+    #form{
+        display: flex;
+        bottom: 0;
+        height: 60px;
+        left: 0;
+        position: absolute;
+        right: 0;
+        padding: 8px 8px;
+    }
+
+    #message{
+        border-radius: 9999px;
+        border: 1px solid #eee;
+        flex: 1;
+        padding: 0 20px;
+
+    }
+    #message:focus{
+        outline: 0;
+    }
+
+    #form > button{
+        background: #09f;
+        color: #fff;
+        border: 0;
+
+        border-radius: 4px;
+        padding: 0px 16px;
+        cursor: pointer;
+
+    }
+
+    #messages{
+        display: inline-block;
+        padding: 1rem 20px;
+        list-style: none;
+        width: 100%;
+        li{
+            padding: 5px 20px;
+            background: #ccc;
+            margin-bottom: 10px;
+            border-radius: 9999px;
+            width: 100%;
+        }
+    }
 </style>
+</head>
 <body>
     <section id="chat">
+        <ul id="messages">
+
+        </ul>
         <form id="form">
             <input type="text" name="message" id="message" placeholder="Type a message" autocomplete="off">
             <button type="submit">Enviar</button>
