--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,11 @@
     <title>CHAT BOT || Valentín Gutiérrez</title>
     <script type="module">
         import { io } from 'https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.4/socket.io.esm.min.js'
-        const socket = io();
+        const socket = io({
+            auth:{
+                serverOffset: 0
+            }
+        });
         const form = document.getElementById('form');
         const message = document.getElementById('message');
         const messages = document.getElementById('messages');
@@ -14,6 +18,7 @@
         socket.on('chat message', msg => {
             const item = `<li>${msg}</li>`;
             messages.insertAdjacentHTML('beforeend', item)
+            socket.auth.serverOffset = serverOffset
         })
         form.addEventListener('submit', e =>{
             e.preventDefault();
@@ -42,6 +47,7 @@
         height: 100vh;
         padding: 36px 36px 100px 36px;
         grid-template-rows: 1fr;
+        background: #313131;
     }
 
     #chat{
