--- a/client/index.html
+++ b/client/index.html
@@ -3,23 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHAT BOT || Valentín Gutiérrez</title>
+    <title>CHAT BOT | Valentín Gutiérrez</title>
     <script type="module">
         import { io } from 'https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.4/socket.io.esm.min.js'
-        const socket = io({
-            auth:{
-                serverOffset: 0
-            }
-        });
         const form = document.getElementById('form');
         const message = document.getElementById('message');
         const messages = document.getElementById('messages');
  
-        socket.on('chat message', msg => {
-            const item = `<li>${msg}</li>`;
+        const getUsername = async () => {
+            const username = localStorage.getItem('username');
+            if(username){
+                
+                console.log(`USERNAME ${username}`)
+                return username
+            }
+
+            const res = await fetch('https://random-data-api.com/api/users/random_user');
+            const { username: randomUsername } = await res.json()
+            localStorage.setItem('username', randomUsername)
+            return randomUsername
+
+        }
+        const socket = io({
+            auth:{
+                username: await getUsername(),
+                serverOffset: 0
+            }
+        });
+        socket.on('chat message', (msg, serverOffset, username) => {
+            const item = `<li>
+                <p>${msg}</p>
+                <small>${username}</small>
+            </li>`;
             messages.insertAdjacentHTML('beforeend', item)
             socket.auth.serverOffset = serverOffset
+            messages.scrollTop = messages.scrollHeight
         })
+
         form.addEventListener('submit', e =>{
             e.preventDefault();
             if(message.value){
@@ -96,6 +116,10 @@
         padding: 1rem 20px;
         list-style: none;
         width: 100%;
+        overflow-y: scroll;
+        height: 100%;
+        scroll-behavior: smooth;
+        padding-bottom: 60px;
         li{
             padding: 5px 20px;
             background: #ccc;
